# Store-income-control

./: .env  Makefile  README.md  __init__.py  create_users.py  forms.py  hello.py  init_data.py  main.py  models.py  pyproject.toml
app/: __init__.py  auth.py  forms.py  models.py  routes.py
app/static/: styles.css
app/templates/: add_employee.html  all_expenses.html  all_returns.html  edit_employee.html  edit_income.html  employee_workdays.html  employees.html  incomes.html  index.html  login.html  shop_employees.html  shop_expenses.html  shop_expenses_table.html  shop_incomes.html  shop_returns.html  shop_sales_returns.html
migrations/versions/: 3ab78aeb4f70_create_users_table.py  3de504618434_add_date_column_to_sales_returns.py  689517ec5db6_add_sales_returns_table.py  81aad297734a_fix_shop_id_duplication_in_income_model.py  86e122fcdbee_добавление_возвратов.py  8a2f6009bb44_add_expense_table.py  8f75c1bd35d5_add_shop_expenses_table.py  c70d343418f2_создание_начальных_таблиц.py  cbd63fad4575_исправление.py  d7f52aecb9a9_добавлены_поля_hours_worked_и_.py  d8be61d4243c_добавление_таблицы_workday.py  db469d11c99c_add_income_table.py  e07c780d1183_add_description_columns_to_shop_expenses.py  e2b14ee12296_начальная_миграция.py
static/: styles.css
templates/: employees.html
